# rust-anti-media-spam-bot

./: BLACKLISTED_HASHES.txt  Cargo.toml  README.md
data/: BLACKLISTED_HASHES.txt
src/: main.rs
