[package]
name = "rust-anti-spam"
version = "0.1.0"
edition = "2024"
default-run = "rust-anti-spam"

[dependencies]
dotenvy = "0.15.7"
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
img_hash = "3.2"
image = "0.23"
hex = "0.4"
